Fix styles for album carousel on mobile

--- a/web/static/css/public/_post_show_album.scss
+++ b/web/static/css/public/_post_show_album.scss
@@ -16,12 +16,16 @@
 	}
 }
 
-.lightbox-container, .lightbox-background{
+.lightbox-container, .lightbox-background, .lightbox-images-container{
 	top: 0;
 	right: 0;
-	bottom: 0;
 	left: 0;
+	bottom: 0;
 }
+
+// .lightbox-container, .lightbox-background{
+// 	bottom: 0;
+// }
 
 .lightbox-container{
 	position: absolute;
@@ -39,9 +43,9 @@
 	}
 
 	.lightbox-images-container{
-		display: inline-block;
-		//so we can use z-index
-		position: relative;
+		display: flex;
+		justify-content: center;
+		position: fixed;
 		z-index: 100;
 		img{
 			max-height: 100vh;
